<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--<item-->
    <!--android:id="@+id/action_refresh"-->
    <!--android:title="@string/menu_refresh"-->
    <!--android:orderInCategory="1"-->
    <!--app:showAsAction="ifRoom">-->
<!--</item>-->

    <item
        android:id="@+id/action_popular"
        android:orderInCategory="1"
        android:title="@string/menu_label_sortby_popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="2"
        android:title="@string/menu_label_sortby_top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="3"
        android:title="@string/menu_label_favorites"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_fetch_more"-->
        <!--android:orderInCategory="3"-->
        <!--android:title="@string/menu_label_query_more"-->
        <!--app:showAsAction="never" />-->

    <!--<group android:checkableBehavior="single">-->
        <!--<item android:id="@+id/menu_sortby_popular"-->
            <!--android:title="@string/sortby_popular" />-->
        <!--<item android:id="@+id/menu_sorby_top_rated"-->
            <!--android:title="@string/sortby_top_rated" />-->
    <!--</group>-->
</menu>