<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!--app:srcCompat="@drawable/poster_placeholder"-->

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie title PSX" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            android:contentDescription="@string/iv_poster_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_weight="90"
            app:srcCompat="@drawable/poster_placeholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintVertical_weight="10"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/tv_release_date_title"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                tools:text="@string/release_date_title"
                android:text="@string/release_date_title" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="2015.05.31" />

            <TextView
                android:id="@+id/tv_vote_average_title"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                tools:text="Vote average"
                android:text="@string/vote_average_title" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/vote_average"
                android:gravity="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="7.4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/overview_title" />
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        tools:text="Here comes the movie plot. Here comes the movie plot. Here comes the movie plot. Here comes the movie plot. " />

                </LinearLayout>

            </ScrollView>


        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
