<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie title PSX" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/iv_poster_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:srcCompat="@drawable/poster_placeholder" />

        <TextView
            android:id="@+id/tv_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            tools:text="@string/release_date_title" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_title"
            tools:text="2015.05.31" />

        <TextView
            android:id="@+id/tv_vote_average_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/vote_average_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            tools:text="@string/vote_average_title" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_title"
            tools:text="6.7" />

        <!--android:onClick="toggle_favorite"-->
        <ToggleButton
            android:id="@+id/btn_favorite_toggle"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/fav_button"
            android:checked="false"

            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            android:textOn=""
            android:textOff=""
            />


        <!--<TextView-->
        <!--android:id="@+id/tv_overview_title"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="17dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/overview_title"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/iv_poster"-->
        <!--tools:text="@string/overview_title" />-->

        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster">

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/overview_title"
                tools:text="@string/overview_title" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textStyle="italic"
                tools:text="Here comes the movie plot. Here comes the movie plot. Here comes the movie plot. Here comes the movie plot. " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/trailers_title"
                tools:text="@string/trailers_title" />
            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@android:drawable/ic_media_play"/>-->
            <!--https://stackoverflow.com/questions/4523609/grid-of-images-inside-scrollview/4536955#4536955-->

            <!--android:numColumns="3"-->
            <!--android:numColumns="@dimen/trailer_grid_cols">-->
            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

        <com.dwbi.android.popularmovies.ExpandableGridView
                android:id="@+id/gv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="@integer/trailer_grid_cols"

            >


                <!--</RelativeLayout>-->
        </com.dwbi.android.popularmovies.ExpandableGridView>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark">

        </View>

    </android.support.constraint.ConstraintLayout>
</ScrollView>